gap and absolute handling fixes

--- a/blocks/cards/_news-helpful.scss
+++ b/blocks/cards/_news-helpful.scss
@@ -27,16 +27,10 @@
 
         .news-help-wrapper{
             .swiper-wrapper{
-                gap: 32px;
-                margin-bottom: 96px;
-
-                @include tablet{
-                    gap: 24px;
-                }
+                margin-bottom: 40px;
 
                 @include mobile{
-                    gap: 8px;
-                    margin-bottom: 80px;
+                    margin-bottom: 24px;
                 }
 
                 .swiper-slide{
@@ -44,7 +38,6 @@
                     border: 1px solid $line-default;
                     border-radius: $radius-card;
                     background: $bg-default;
-                    margin-right: 0 !important;
 
                     div{
                         picture{
@@ -84,10 +77,10 @@
             }
 
             .nav-wrapper{
-                position: absolute;
-                bottom: 5%;
-                right: 0;
-                margin-right: 64px;
+                position: static;
+                display: flex;
+                justify-content: flex-end;
+                gap: 16px;
 
                 @include tablet{
                     margin-right: 24px;
@@ -98,12 +91,16 @@
                 }
 
                 .swiper-button-next{
+                    position: static;
+                    margin-top: unset;
                     background: $color-variants-bg-light-1;
                     border-radius: 44px;
                     color: $color-variants-link-default;
                 }
 
                 .swiper-button-prev{
+                    position: static;
+                    margin-top: unset;
                     background: $color-variants-bg-light-1;
                     border-radius: 44px;
                     color: $color-variants-link-default;
